<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/viewImage"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:gravity="center_vertical"
            android:scaleType="centerInside"
            android:padding="10dp"
            />
        <Button
            android:id="@+id/btnSelectPhoto"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:background="@drawable/camera"/>
    </LinearLayout>

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/margin"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/margin"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/phoneNumber"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/margin"
        android:hint="@string/phoneNumber"
        android:inputType="phone" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/signUpPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/large_margin"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/createAccountButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:onClick="signUp"
        android:text="@string/sign_up"
        bootstrap:bb_icon_right="fa-pencil-square-o"
        bootstrap:bb_type="success" />

</LinearLayout>
